Avoid position relative to textarea and missing border rendered

--- a/public/css/mbc-style.css
+++ b/public/css/mbc-style.css
@@ -190,9 +190,10 @@ a.mbc-new-message-link:hover {
   -webkit-box-shadow: inset 0 1px 2px #ccc;
   border: 1px solid #999;
   font-size: 16px;
-  overflow: hidden;
   margin: 0;
+  overflow: hidden;
   padding: 4px;
+  position: static; /* avoid position relative set for any textarea element in style.css line 169 */
   resize: none;
   word-break: normal;
 }
